# agentic-online-clinic

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  AGENT_IMPLEMENTATION.md  README.md  TESTING_AGENT.md  TODO_AGENTIC_REFACTOR.md  agentic-assistant-pid.md  pyproject.toml  start-agent.ps1
.github/: pull_request_template.md
.github/workflows/: ci.yaml
_assets/: .$arch_diagrams.drawio.bkp  arch_diagrams.drawio  test_case_matrix.xlsx
configs/: config.yaml
demo/: demo.py  ruff_rules.md  uv-python.md  uv-scripts.md  uv-tools.md
docs/: docs.md
notebooks/: azure_openai_connection_test.ipynb  eda.ipynb
scripts/: pretty_print_llm_log.py  print_llm_cost.py  runner.py  uv_dependency_relock.sh
src/: __init__.py
src/api/: __init__.py  agent_routes.py  crud.py  database.py  deps.py  main.py  models.py  test.py  test_crud.py
src/api/appointments/: __init__.py  crud.py  models.py  routes.py  schemas.py  test.py  test_endpoints.ipynb
src/api/patients/: __init__.py  crud.py  models.py  routes.py  schemas.py
src/core/: config.py  env.py  llm_logger.py  logger.py  print_llm_cost.py
src/llm/: agent.py  agent_system_prompts.yaml  ai.py  appointment_agent.py  deps.py  orchestrator_agent.py  patient_agent.py
tests/: test_template.py
ui/: app.py  appointment_page.py  clinic.py  patient_page.py
